--- a/docs/guides/specify-runtime-options.mdx
+++ b/docs/guides/specify-runtime-options.mdx
@@ -59,6 +59,11 @@ Example:
 
 ```python
 from qiskit_ibm_runtime.options import EstimatorOptions
+from qiskit_ibm_runtime import QiskitRuntimeService
+from qiskit_ibm_runtime import EstimatorV2 as Estimator
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False)
 
 options =  EstimatorOptions(resilience_level=2, resilience={"zne_mitigation": True, "zne": {"noise_factors": [1, 3, 5]}})
 
@@ -127,6 +132,14 @@ You can specify the options in this format: `primitive.options.option.sub-option
 <Tabs>
   <TabItem value="PrimV2" label="V2 primitives">
 ```python
+from qiskit_ibm_runtime import QiskitRuntimeService
+from qiskit_ibm_runtime import EstimatorV2 as Estimator
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False)
+
+estimator = Estimator(mode=backend)
+
 # Setting options after primitive initialization
 # This uses auto complete.
 estimator.options.default_shots = 4000
@@ -159,6 +172,13 @@ The run() method accepts options in V1 only.
 In V2, the only values you can pass to `run()` are those defined in the interface.  That is, `shots` for Sampler and `precision` for Estimator. This overwrites any value set for `default_shots` or `default_precision` for the current run.
 
 ```python
+from qiskit_ibm_runtime import QiskitRuntimeService
+from qiskit_ibm_runtime import SamplerV2 as Sampler
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False)
+
+sampler = Sampler(mode=backend)
 # Sample two circuits at 128 shots each.
 sampler.run([circuit1, circuit2], shots=128)
 
@@ -207,9 +227,13 @@ Example:
 
 ```python
 from qiskit_ibm_runtime import SamplerV2 as Sampler
+from qiskit_ibm_runtime import QiskitRuntimeService
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False)
 
 # Setting shots during primitive initialization
-sampler = Sampler(backend, options={"default_shots": 4096})
+sampler = Sampler(mode=backend, options={"default_shots": 4096})
 
 # Setting options after primitive initialization
 # This uses auto complete.
@@ -242,6 +266,7 @@ shots directly in the `run()` method. This overwrites the initial `shots` settin
 ```python
 from qiskit_ibm_runtime import Estimator
 
+
 estimator = Estimator(session=backend)
 
 estimator.run(circuits=circuits, observables=observables, shots=50)
@@ -266,6 +291,12 @@ The value is set in seconds, based on quantum time (not wall clock time), which 
   <TabItem value="PrimV2" label="V2 primitives">
 
 ```python
+from qiskit_ibm_runtime import QiskitRuntimeService
+from qiskit_ibm_runtime import EstimatorV2 as Estimator
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False)
+
 estimator = Estimator(mode=backend)
 
 estimator.options.max_execution_time = 2500
