Use absolute internal links in migration guides

--- a/docs/api/migration-guides/index.mdx
+++ b/docs/api/migration-guides/index.mdx
@@ -9,10 +9,10 @@ description: Migrate to using the newest from Qiskit and Qiskit Runtime
 These migration guides help you more effectively use Qiskit and Qiskit Runtime:
 
 * Migrate to Qiskit 1.0
-   * [Qiskit 1.0 packaging changes](/api/migration-guides/qiskit-1.0-installation)
-   * [Qiskit 1.0 feature changes](/api/migration-guides/qiskit-1.0-features)
-* [Migrate to the Qiskit Runtime V2 primitives](/api/migration-guides/v2-primitives)
-* [Qiskit Runtime execution mode changes](/api/migration-guides/sessions)
+   * [Qiskit 1.0 packaging changes](./qiskit-1.0-installation)
+   * [Qiskit 1.0 feature changes](./qiskit-1.0-features)
+* [Migrate to the Qiskit Runtime V2 primitives](./v2-primitives)
+* [Qiskit Runtime execution mode changes](./sessions)
 * Migrate to Qiskit Runtime
    * [Overview](./qiskit-runtime)
    * [Migrate from `qiskit-ibmq-provider`](./qiskit-runtime-from-ibmq-provider)
@@ -20,7 +20,7 @@ These migration guides help you more effectively use Qiskit and Qiskit Runtime:
    * [Migrate options](./qiskit-runtime-options)
    * [Common use cases](./qiskit-runtime-use-case)
    * [Examples](./qiskit-runtime-examples)
-* [Migrate from cloud simulators to local simulators](/api/migration-guides/local-simulators)
+* [Migrate from cloud simulators to local simulators](./local-simulators)
 * Qiskit 0.44 changes
    * [`qiskit.algorithms` new interface](./qiskit-algorithms-module)
    * [`qiskit.opflow` deprecation](./qiskit-opflow-module)
