--- a/docs/api/migration-guides/qiskit-runtime-examples.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-examples.mdx
@@ -504,7 +504,7 @@ to the following:
 - [Common use cases](qiskit-runtime-use-case)
 - [Migrate `backend.run` options to primitive options](qiskit-runtime-options)
 - [Setting execution options](/guides/runtime-options-overview)
-- [Primitive execution options API reference](../qiskit-ibm-runtime/qiskit_ibm_runtime.options.Options)
+- [Primitive execution options API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.Options)
 - [How to run a session](/guides/run-jobs-session)
 - [Qiskit Runtime local testing mode](/guides/local-testing-mode)
 </Admonition>
