Fix spelling in migration guides

--- a/docs/api/migration-guides/qiskit-1.0-features.mdx
+++ b/docs/api/migration-guides/qiskit-1.0-features.mdx
@@ -3,6 +3,8 @@ title: Qiskit 1.0 feature migration guide
 description: Description of feature changes introduced in Qiskit 1.0 and how to update your code to work with them.
 ---
 
+{/* cspell:ignore nbqa, ipynb, tqdm */}
+
 # Qiskit 1.0 feature changes
 
 This guide describes migration paths for the most important feature changes in Qiskit 1.0, organized by module.
@@ -558,7 +560,7 @@ The following examples show the migration paths of the `basicaer` simulators.
 
 
 <Tabs>
-  <TabItem value="statevec" label="Statevector simulator" default>
+  <TabItem value="statevector" label="Statevector simulator" default>
     ```python
     from qiskit import QuantumCircuit
 
