--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -45,7 +45,7 @@ from qiskit_ibm_runtime.options import EstimatorOptions
 # Set options during primitive initialization with a nested dictionary
 estimator1 = Estimator(backend, options={"twirling": {"enable_gates": True}})
 
-# Update the options after intialization
+# Update the options after initialization
 estimator1.options.twirling.num_randomizations = 100
 
 # Set options during primitive initialization with an options class
@@ -53,13 +53,13 @@ options = EstimatorOptions()
 options.twirling.enable_gates = True
 estimator2 = Estimator(backend, options=options)
 
-# Update the options after intialization
+# Update the options after initialization
 estimator2.options.twirling.num_randomizations = 100
 
 # Keep all default options during primitive initialization
 estimator3 = Estimator(backend)
 
-# Update the options after intialization
+# Update the options after initialization
 estimator3.options.twirling.enable_gates = True
 estimator3.options.twirling.num_randomizations = 100
 ```
@@ -76,7 +76,7 @@ Any options you manually specify in addition to the resilience level are applied
 
 The `SamplerV2.run` method accepts two arguments: a list of PUBs, each of which can specify a PUB-specific value for shots, and a shots keyword argument. These shot values are a part of the Sampler execution interface, and are independent of the Runtime Estimator's options.  They take precedence over any values specified as options in order to comply with the Sampler abstraction.
 
-However, if `shots` is not specified by any PUB or in the run keyword argument (equivalently, if they are all `None`), then the shots value from the options is used, most notably `default_shots`. To sumarize, this is the the order of precedence for specifying shots in the Sampler, for any particular PUB:
+However, if `shots` is not specified by any PUB or in the run keyword argument (equivalently, if they are all `None`), then the shots value from the options is used, most notably `default_shots`. To summarize, this is the the order of precedence for specifying shots in the Sampler, for any particular PUB:
 
 1. If the PUB specifies shots, use that value.
 2. If the shots keyword argument is specified in `run`, use that value.
