--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -37,82 +37,9 @@ The tables in the [Options classes summary](#options-classes) section lists the 
 <span id="options-precedence"></span>
 ## Set options
 
-Options can be defined before a primitive is constructed and passed to the primitive, which will make a copy of them. This can be done either as a nested dictionary, or by using the options classes. Additionally, after the primitive is constructed, its options can be changed. Use the workflow that works best for your application.
+Options can be defined before a primitive is constructed and passed to the primitive, which will make a copy of them. This can be done either as a nested dictionary, or by using the options classes. Additionally, after the primitive is constructed, its options can be changed. Use the workflow that works best for your application.  See [Specify options](specify-runtime-options) for full details.
 
-Example:
 
-``` python
-from qiskit_ibm_runtime import EstimatorV2 as Estimator
-from qiskit_ibm_runtime.options import EstimatorOptions
-
-# Set options during primitive initialization with a nested dictionary
-estimator1 = Estimator(backend, options={"twirling": {"enable_gates": True}})
-
-# Update the options after initialization
-estimator1.options.twirling.num_randomizations = 100
-
-# Set options during primitive initialization with an options class
-options = EstimatorOptions()
-options.twirling.enable_gates = True
-estimator2 = Estimator(backend, options=options)
-
-# Update the options after initialization
-estimator2.options.twirling.num_randomizations = 100
-
-# Keep all default options during primitive initialization
-estimator3 = Estimator(backend)
-
-# Update the options after initialization
-estimator3.options.twirling.enable_gates = True
-estimator3.options.twirling.num_randomizations = 100
-```
-
-### Special cases (V2 only)
-
-#### Resilience level (Estimator only)
-
-The resilience level is not actually an option, but specifies a base set of curated options to build off of. In general, level 0 turns off all error mitigation, level 1 turns on options for measurement error mitigation, and level 2 turns on options for gate and measurement error mitigation.
-
-Any options you manually specify in addition to the resilience level are applied on top of the base set of options defined by the resilience level. So in principle, you could set the resilience level to 1, but then turn off measurement mitigation, although this is not advised.
-
-In the following example, setting the resilience level to 0 initially turns off `zne_mitigation`, but `estimator.options.resilience.zne_mitigation = True` overrides the relevent setup from `estimator.options.resilience_level = 0`.
-
-``` python
-from qiskit_ibm_runtime import EstimatorV2, QiskitRuntimeService
-from qiskit import QuantumCircuit
-
-service = QiskitRuntimeService()
-backend = service.backend("ibm_auckland")
-
-estimator = EstimatorV2(backend)
-
-estimator.options.default_shots = 100
-estimator.options.resilience_level = 0
-estimator.options.resilience.zne_mitigation = True
-```
-
-### Shots (Sampler only)
-
-The `SamplerV2.run` method accepts two arguments: a list of PUBs, each of which can specify a PUB-specific value for shots, and a shots keyword argument. These shot values are a part of the Sampler execution interface, and are independent of the Runtime Estimator's options.  They take precedence over any values specified as options in order to comply with the Sampler abstraction.
-
-However, if `shots` is not specified by any PUB or in the run keyword argument (equivalently, if they are all `None`), then the shots value from the options is used, most notably `default_shots`. To summarize, this is the the order of precedence for specifying shots in the Sampler, for any particular PUB:
-
-1. If the PUB specifies shots, use that value.
-2. If the shots keyword argument is specified in `run`, use that value.
-3. If `sampler.options.default_shots` is specified, use that value.
-
-For example, if shots are specified in all three places, the one with highest precedence (shots specified in the PUB) is used.
-
-### Precision (Estimator only)
-
-Precision is analogous to shots, described in the previous section, except that the options contains both `default_shots` and `default_precision`. Specifically, for any particular Estimator PUB:
-
-1. If the PUB specifies precision, use that value.
-2. If the precision keyword argument is specified in `run`, use that value.
-3. If `estimator.options.default_shots` is specified, use that value to control the amount of data.
-4. If `estimator.options.default_precision` is specified, use that value.
-
-For example, if precision is specified in all four places, the one with highest precedence (precision specified in the PUB) is used.
 
 <span id="options-classes"></span>
 ## Options classes summary
