Updated to use newer client

--- a/docs/guides/first-serverless-program.ipynb
+++ b/docs/guides/first-serverless-program.ipynb
@@ -128,7 +128,7 @@
    "source": [
     "## Deploy to IBM Quantum Platform\n",
     "\n",
-    "Authenticate to the `IBMServerlessProvider` with your IBM Quantum token, which you can find in your [IBM Quantum account](https://quantum.ibm.com/account), and upload the program."
+    "Authenticate to the `IBMServerlessClient` with your IBM Quantum token, which you can find in your [IBM Quantum account](https://quantum.ibm.com/account), and upload the program."
    ]
   },
   {
@@ -137,10 +137,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit_serverless import IBMServerlessProvider, QiskitFunction\n",
+    "from qiskit_serverless import IBMServerlessClient, QiskitFunction\n",
     "\n",
     "# Authenticate to the remote cluster and submit the pattern for remote execution\n",
-    "serverless = IBMServerlessProvider(\n",
+    "serverless = IBMServerlessClient(\n",
     "    token=API_TOKEN\n",
     ")"
    ]
