Update title on responsible quantum computing pg

--- a/docs/responsible-quantum-computing.mdx
+++ b/docs/responsible-quantum-computing.mdx
@@ -1,10 +1,10 @@
 ---
-title: Responsible quantum computing and inclusive tech
+title: Responsible quantum computing
 description: A review of the Responsible Quantum Principles at IBM, and how to report a Responsible Quantum Issue
 
 ---
 
-# Responsible quantum computing and inclusive tech
+# Responsible quantum computing
 
 Quantum technology has the potential to accelerate use cases and even solve problems that were previously inaccessible. But how will this new computing power impact society at large? This requires us to be thoughtful — we must research and develop responsibly. 
 
