--- a/docs/guides/first-serverless-program.ipynb
+++ b/docs/guides/first-serverless-program.ipynb
@@ -42,9 +42,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setting up your files\n",
+    "## Set up your files\n",
     "\n",
-    "Serverless requires setting up your workload’s `.py` files into a dedicated directory. For example, we recommend the following structure:\n",
+    "Serverless requires setting up your workload’s `.py` files into a dedicated directory. The following structure is an example of good practice:\n",
     "\n",
     "```text\n",
     "serverless_program\n",
