--- a/docs/guides/first-serverless-program.ipynb
+++ b/docs/guides/first-serverless-program.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## Example: remote transpilation with Qiskit Serverless\n",
     "\n",
-    "We’ll start with the following example that transpiles a `circuit` against a given `backend` and target `optimization_level`, and gradually add more elements to deploy your workload to Qiskit Serverless."
+    "Start with the following example that transpiles a `circuit` against a given `backend` and target `optimization_level`, and gradually add more elements to deploy your workload to Qiskit Serverless."
    ]
   },
   {
