--- a/docs/guides/first-serverless-program.ipynb
+++ b/docs/guides/first-serverless-program.ipynb
@@ -56,9 +56,9 @@
     "\n",
     "Serverless uploads the contents of `source_files` to run remotely. Once these are set up, you can adjust `transpile_remote.py` to fetch inputs and return outputs. \n",
     "\n",
-    "### Getting program arguments\n",
+    "### Get program arguments\n",
     "\n",
-    "Our initial `transpile_parallel.py` has two inputs: `circuits` and `backend`. Serverless is currently limited to only accept serializable inputs and outputs. For this reason, we cannot pass in `backend` directly, but use `backend_name` as a string instead."
+    "Your initial `transpile_parallel.py` has two inputs: `circuits` and `backend`. Serverless is currently limited to only accept serializable inputs and outputs. For this reason, you cannot pass in `backend` directly, so use `backend_name` as a string instead."
    ]
   },
   {
