--- a/docs/guides/manage_serverless_resources.ipynb
+++ b/docs/guides/manage_serverless_resources.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also create and run multiple parallel tasks as follows:"
+    "You can also create and run multiple parallel tasks as follows:"
    ]
   },
   {
