--- a/docs/guides/manage_serverless_resources.ipynb
+++ b/docs/guides/manage_serverless_resources.ipynb
@@ -174,14 +174,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Managing data across your program\n",
+    "## Manage data across your program\n",
     "\n",
-    "Qiskit Serverless allows you to manage files in `/data` directory across all your programs. This includesd several limitations:\n",
+    "Qiskit Serverless allows you to manage files in the `/data` directory across all your programs. This includes several limitations:\n",
     "\n",
     "- Only `tar` and `h5` files are supported today\n",
     "- This is only a flat `/data` storage, and cannot have `/data/folder/` subdirectories\n",
     "\n",
-    "First, we'll explore how to upload files:"
+    "The following shows how to upload files:"
    ]
   },
   {
