--- a/docs/guides/manage_serverless_resources.ipynb
+++ b/docs/guides/manage_serverless_resources.ipynb
@@ -231,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we can list all the files in our `data` directory. This data is accessible to all programs."
+    "Next, you can list all the files in our `data` directory. This data is accessible to all programs."
    ]
   },
   {
