--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -11,7 +11,7 @@ The name "Qiskit" is a general term referring to a collection of software for ex
 
 In addition, many open-source projects are part of the broader Qiskit ecosystem. These software tools are not part of Qiskit itself, but rather interface with Qiskit and can provide valuable additional functionality.
 
-![All Qiskit pattern steps are shown (Map problem, Optimize for hardware, Execute on hardware, and Post-process results). All steps, except for 'Execute on hardware', use the Qiskit SDK. 'Optimizing for hardware' additionally uses the Qiskit Transpiler Service.  'Executing on hardware' uses only the Qiskit Runtime Service.](/images/qiskit-patterns/patterns.svg)
+![All Qiskit pattern steps are shown (Map problem, Optimize for hardware, Execute on hardware, and Post-process results). All steps, except for 'Execute on hardware', use the Qiskit SDK. 'Optimizing for hardware' additionally uses the Qiskit Transpiler Service. 'Executing on hardware' uses only the Qiskit Runtime Service. Underneath all the patterns is a tile for 'Qiskit Serverless'](/images/qiskit-patterns/patterns.svg)
 
 IBM&reg; is committed to the responsible development of quantum computing. Learn more, review our responsible quantum principles, and flag responsible quantum computing issues in the [Responsible quantum computing and inclusive tech](/responsible-quantum-computing) topic.
 
