Add PEA to error techniques topic

--- a/docs/guides/error-mitigation-and-suppression-techniques.ipynb
+++ b/docs/guides/error-mitigation-and-suppression-techniques.ipynb
@@ -121,6 +121,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5dcab7b",
+   "metadata": {},
+   "source": [
+    "## Probabilistic Error Amplification (PEA)\n",
+    "\n",
+    "The main challenge in successfully implementing [Zero-noise extrapolation(ZNE)](#zne) is to have an accurate model for noise in the expectation value and to amplify the noise in a known way.  For utility-scale experiments, PEA is the most attractive can be applied to any circuit that can be run with native noise factor $(\\lambda - 1)$. \n",
+    "\n",
+    "Because PEA is an amplification technique of ZNE, you also need to enable ZNE by setting `resilience.zne_mitigation = True`. Other `resilience.zne` options can be used in conjunction to set extrapolators, amplification levels, and so on. Experiments to learn a sparse Pauli noise model are performed for every uniquely identified entangling layer (up to a specified cutoff) in the union of circuits across primitive unified blocs (PUBs); see the [`LayerNoiseLearningOptions`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.LayerNoiseLearningOptions) API reference for all available options. Add full-width barriers to specify layers unambiguously."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4947f442",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimator = Estimator(mode=backend)\n",
+    "estimator.options.resilience.zne_mitigation = True\n",
+    "estimator.options.pea = {\"resilience\": {\"zne\": {\"amplifier\": \"pea\"}}}"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "ad9d9159-4277-4aec-bf26-da748e240f38",
@@ -171,6 +195,7 @@
     "tags": []
    },
    "source": [
+    "<span id=\"zne\"></span>\n",
     "## Zero-noise extrapolation (ZNE)\n",
     "\n",
     "Zero-noise extrapolation (ZNE) is a technique for mitigating errors in estimating expectation values of observables. While it often improves results, it is not guaranteed to produce an unbiased result.\n",
