--- a/docs/guides/run_your_first_serverless_program.ipynb
+++ b/docs/guides/run_your_first_serverless_program.ipynb
@@ -58,9 +58,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run an uploaded program, and pass inputs\n",
+    "## Run an uploaded program and pass inputs\n",
     "\n",
-    "First, let's setup our inputs. Our program has three inputs: `circuits`, `backend`, and `optimization_level`. We can use `random_circuit` to help us create 30 random circuits: "
+    "First, set up your inputs. Your program has three inputs: `circuits`, `backend`, and `optimization_level`. You can use `random_circuit` to create 30 random circuits: "
    ]
   },
   {
