Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/porting_code_to_qiskit_serverless.mdx
+++ b/docs/guides/porting_code_to_qiskit_serverless.mdx
@@ -1,13 +1,13 @@
 ---
-title: Porting code to Qiskit Serverless
+title: Port code to Qiskit Serverless
 description: How to port existing code to leverage Qiskit Serverless
 ---
 
-# Porting code to Qiskit Serverless
+# Port code to Qiskit Serverless
 
-Over the past sections, we've incrementally added capabilities to port existing code to leverage Qiskit Serverless:
+Over the past sections, you've incrementally added capabilities to port existing code to leverage Qiskit Serverless:
 
-## Updating the experiment
+## Update the experiment
 
 <Tabs>
   <TabItem value="LocalExperiment" label="Local Experiment">
@@ -99,7 +99,7 @@ except Exception as e:
   </TabItem>
 </Tabs>
 
-## Uploading to Qiskit Serverless
+## Upload to Qiskit Serverless
 
 ```python
 from qiskit_serverless import IBMServerlessClient, QiskitFunction
@@ -124,7 +124,7 @@ Output
 'transpile_remote_serverless'
 ```
 
-## Remotely running in Qiskit Serverless
+## Remotely run in Qiskit Serverless
 
 ```python
 from qiskit.circuit.random import random_circuit
