--- a/docs/guides/run_your_first_serverless_program.ipynb
+++ b/docs/guides/run_your_first_serverless_program.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Running your serverless workloads remotely\n",
+    "# Run your Serverless workloads remotely\n",
     "\n",
-    "This section explores how to list programs available in Serverless, how to pass inputs into these programs and run them remotely, checking status, and retrieving results + logs.\n",
+    "This section explores how to list programs available in Serverless, pass inputs into these programs, run them remotely, check their status, and retrieve results and logs.\n",
     "\n",
-    "First, authenticate with Qiskit Serverless with your [IBM Quantum account](https://quantum.ibm.com/account)."
+    "First, authenticate to Qiskit Serverless with your [IBM Quantum account](https://quantum.ibm.com/account)."
    ]
   },
   {
