--- a/docs/guides/run_your_first_serverless_program.ipynb
+++ b/docs/guides/run_your_first_serverless_program.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "## List programs available\n",
     "\n",
-    "We can use `serverless.list()` to print out a list of the available programs to run with Qiskit Serverless."
+    "You can use `serverless.list()` to print out a list of the available programs to run with Qiskit Serverless."
    ]
   },
   {
