--- a/docs/guides/max-execution-time.mdx
+++ b/docs/guides/max-execution-time.mdx
@@ -52,7 +52,7 @@ When a session is started, it is assigned a maximum session timeout value. After
 
 Batch jobs have an interactive timeout value (iTTL) between jobs and a maximum time to live (TTL) value. If you don't explicitly close a batch, it is deactivated after the iTTL expires and can be reactivated at any time until it reaches its  maximum TTL (usually 8h).
 
-To determine the maximum timeout value for a batch, use the [`batch.details()`  method](run-jobs-batch#batch-details) and look for the `max_time` value.
+To determine the maximum TTL value for a batch, use the [`batch.details()`  method](run-jobs-batch#batch-details) and look for the `max_time` value.
 
 ## Other limitations
 
